@@ -1,6 +1,7 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
+ - 26Mar2019 Reverts partial support for nested OpenMP in Intel KMPC runtime
  + 26Mar2019 Adds instrumentation support for Mprobe, Improbe, Mrecv, Imrecv 
  * 26Mar2019 Reverts commit 1a215e849f to stop using dladdr to translate UF from dynamic libraries
  * 25Mar2019 Fixes missing worksharings in GNU and Intel OpenMP
